more work on maps component

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -11,7 +11,7 @@
   <body>
     <h1>formic-example</h1>
     <div id="container"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnkdpidMKebP6v1vo3FRK-IfsRS8V2hlM"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnkdpidMKebP6v1vo3FRK-IfsRS8V2hlM&libraries=places"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
