better example input

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -6,13 +6,12 @@
     <meta name="description" content="">
     <link rel="stylesheet" href="//cdn.quilljs.com/1.3.6/quill.snow.css" />
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
-    <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <title>hi, world!</title>
   </head>
   <body>
     <h1>formic-example</h1>
     <div id="container"></div>
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCnkdpidMKebP6v1vo3FRK-IfsRS8V2hlM&libraries=places"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
