clean up app.cljs

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="//cdn.quilljs.com/1.3.6/quill.snow.css" />
     <link rel="stylesheet" href="https://unpkg.com/tachyons@4.10.0/css/tachyons.min.css"/>
     <link rel="stylesheet" href="css/styles.css" />
-    <title>hi, world!</title>
+    <title>Formic example</title>
   </head>
   <body>
     <h1>formic-example</h1>
